--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,15 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="%PUBLIC_URL%/img/favicon3.png"
+      href="%PUBLIC_URL%/img/favicon2.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-US-Compatible" content="ie=edge" />
     <meta name="description" content="Free Music WebSite" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#301c4d" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="msapplication-navbutton-color" content="#000000" />
+    <meta name="msapplication-navbutton-color" content="#301c4d" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
