--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,16 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
   </head>
   <body>
+    <input type="hidden" value="%NODE_ENV%" id="node_env_mode" />
+    <script>
+      var mode = document.querySelector("#node_env_mode").value;
+      if (
+        mode === "production" &&
+        typeof window.__REACT_DEVTOOLS_GLOBAL_HOOK__ === "object"
+      ) {
+        window.__REACT_DEVTOOLS_GLOBAL_HOOK__.inject = function () { };
+      }
+    </script>
     <div id="root"></div>
     <div id="noise"></div>
   </body>
